Fix compilation of DateMath.cpp with MSVC https://bugs.webkit.org/show_bug.cgi?id=123680

Reviewed by Darin Adler.

* wtf/DateMath.cpp:
(WTF::appendTwoDigitNumber): Help the compiler finding the
correct overload by casting the characters to LChar.


Canonical link: https://commits.webkit.org/141873@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158520 268f45cc-cd09-0410-ab3c-d52691b4dbfc